wip: add header structure and styles

--- a/style.css
+++ b/style.css
@@ -26,3 +26,68 @@ body{
   --dark-purple-color:#552049;
 }
 
+/* navbar  */
+.header{
+  margin-bottom: 2rem;
+  padding: 1rem;
+}
+.header,.footer__content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+.header img,.footer__logo{
+  width: 48px;
+  height: 48px;
+}
+
+.header button,.footer__button{
+  background-color: var(--black-color);
+  color: var(--light-cream-color);
+  height: 44px;
+  width: 176px;
+  border-radius: 1.75rem;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0px;
+  border: none;
+  cursor: pointer;
+
+  &:hover{
+    background-color: var(--galactic-blue-color);
+    color: var(--light-cream-color);
+  }
+}
+
+
+/* media queries */
+/* tablet */
+@media screen and (min-width: 768px) {
+.header,.footer__content{
+  margin-bottom: 4rem;
+  }
+}
+
+/* desktop */
+@media screen and (min-width: 1024px) {
+  .container{
+    max-width: 1024px;
+    margin: 0 auto;
+  }
+
+  .hero{
+    margin-bottom: 5rem;
+
+    & .hero__content{
+
+        & p{
+          max-width: 730px;
+        }
+    }
+  }
+
+
+}
+
+  
