--- a/style.css
+++ b/style.css
@@ -60,6 +60,39 @@ body{
   }
 }
 
+/* hero section   */
+.hero{
+  margin-bottom: 2rem;
+
+  .hero__content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  
+    &  h1{
+    color: var(--black-color);
+    font-size: 2.25rem;
+    font-weight: bold;
+    line-height: auto;
+    letter-spacing: 0px;
+    text-align: center;
+    margin-bottom: 1rem;
+    }
+  
+    & p{
+    color: var(--medium-brown-color);
+    font-size: 1rem;
+    font-weight:400;
+    line-height: 1.625rem;
+    letter-spacing: 0px;
+    text-align: center;
+    max-width: 285px;
+    margin:0 auto;
+    }
+  }
+}
+
+
 
 /* media queries */
 /* tablet */
@@ -67,6 +100,19 @@ body{
 .header,.footer__content{
   margin-bottom: 4rem;
   }
+
+  /* hero */
+.hero{
+   margin-bottom: 4rem;
+
+   & h1{
+   margin-bottom: 1.688rem;
+}
+    & p{
+  max-width: 573px;
+  }
+}
+
 }
 
 /* desktop */
@@ -85,6 +131,7 @@ body{
           max-width: 730px;
         }
     }
+
   }
 
 
