--- a/style.css
+++ b/style.css
@@ -168,6 +168,69 @@ body{
   } 
 }
 
+/* about section */
+.about{
+  display: flex;
+  align-items: center;
+  /* padding: 1rem; */
+  margin-bottom: 6.25rem;
+
+  & .about__content{
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  align-items: center;
+  gap: 2.5rem;
+
+  & .about__image{
+  width: 18.75rem;
+  height: auto;
+  } 
+
+  & .about__text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1.5rem;
+  text-align: center;
+
+   &.about__text h2{
+    padding: 0 1rem;
+    color: var(--black-color);
+    font-size: 1.5rem;
+    font-weight: bold;
+    line-height: auto;
+    letter-spacing: 0px;
+    }
+
+  &.about__text p{
+    padding: 0 1rem;
+    color: var(--medium-brown-color);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.625rem;
+    letter-spacing: 0px;
+    }
+  }
+
+  & .about__button{
+  background-color: var(--light-red-color);
+  color: var(--light-cream-color);
+  height: 44px;
+  width: 176px;
+  border-radius: 1.75rem;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0px;
+  border: none;
+  cursor: pointer;
+    &:hover{
+      background-color: var(--summer-yellow-color);
+      color: var(--light-cream-color);
+      }
+    }
+  }
+}
 
 
 
@@ -205,6 +268,32 @@ body{
   grid-row: span 2;
   }
 }
+
+/* about */
+.about{
+
+  .about__content{
+    flex-direction: row;
+  
+    & h2{
+    font-size: 40px;
+    line-height: 40px;
+    }
+
+    & .about__image{
+  width: 22.75rem;
+  height: auto;
+  margin-left: -3.75rem;
+  }
+
+  & .about__text{
+  text-align: left;
+  align-items: flex-start;
+  max-width: 21.188rem;
+    }   
+  }
+}
+
 
 }
 
@@ -244,6 +333,30 @@ body{
     }
   }
 }
+
+/* about */
+.about{
+  margin-bottom: 5.5rem;
+
+  & .about__content{
+  flex: 1;
+  flex-direction: row;
+  justify-content: space-between;
+
+  & .about__image{
+  width: 27.813rem;
+  height: auto;
+  margin-left: 0;
+    }
+
+  & .about__text{
+  text-align: left;
+  align-items: flex-start;
+  max-width: 21.188rem;
+    }
+  }
+}
+
 
 }
 
