--- a/style.css
+++ b/style.css
@@ -294,6 +294,62 @@ body{
   }
 }
 
+.contact{
+    padding: 1rem;
+    margin-bottom: 6.25rem;
+
+  & .contact__content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--black-color);
+  color: var(--light-cream-color);
+  padding: 2rem;
+  border-radius: 0.625rem;
+  text-align: center;
+
+  & .contact__text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+  & h4{
+  font-size: 1.5rem;
+  font-weight: bold;
+  line-height: auto;
+  letter-spacing: 0px;
+  margin-bottom: 1.5rem;
+}
+
+ & p{
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.625rem;
+  letter-spacing: 0px;
+  margin-bottom: 1.5rem;
+}
+
+  & .contact__button{
+  background-color: var(--light-red-color);
+  color: var(--light-cream-color);
+  height: 44px;
+  width: 176px;
+  border-radius: 1.75rem;
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  letter-spacing: 0px;
+  border: none;
+  cursor: pointer;
+
+  &:hover{
+    background-color: var(--summer-yellow-color);
+  }
+    }
+  }
+}
+
 
 
 
@@ -446,6 +502,24 @@ body{
   }
 }
 
+/* contact */
+
+.contact{
+
+  & .contact__content{
+    flex-direction: row;
+    justify-content: space-between;
+
+    & .contact__text{
+      align-items: flex-start;
+      text-align: left;
+
+      & p{
+        max-width: 33.75rem;
+        }
+      }
+    }
+  }
 }
 
   
