--- a/style.css
+++ b/style.css
@@ -105,14 +105,21 @@ body{
 .hero{
    margin-bottom: 4rem;
 
-   & h1{
-   margin-bottom: 1.688rem;
-}
-    & p{
-  max-width: 573px;
+   & .hero__content{
+    & h1{
+        font-size: 2.75rem;
+        line-height: auto;
+        letter-spacing: 0px;
+        margin-bottom: 1.688rem;
+    }
+        & p{
+           font-size: 1.125rem;
+           line-height: 1.75rem;
+           letter-spacing: 0px;
+           max-width: 573px;
+        }
+     }   
   }
-}
-
 }
 
 /* desktop */
@@ -127,14 +134,20 @@ body{
 
     & .hero__content{
 
+      & h1{
+        font-size: 3.5rem;
+        line-height: auto;
+        letter-spacing: 0px;
+       }
+
         & p{
+          font-size: 1.125rem;
+          line-height: 1.75rem;
+          letter-spacing: 0px;
           max-width: 730px;
         }
     }
-
   }
-
-
 }
 
   
