--- a/style.css
+++ b/style.css
@@ -368,6 +368,7 @@ body{
    margin-bottom: 4rem;
 
    & .hero__content{
+    margin-top: 4rem;
     & h1{
         font-size: 2.75rem;
         line-height: auto;
@@ -453,6 +454,7 @@ body{
     margin-bottom: 5rem;
 
     & .hero__content{
+        margin-top: 4.125rem;
 
       & h1{
         font-size: 3.5rem;
