--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
 
 body{
   background-color: var(--light-cream-color);
+  color: var(--black-color);
 }
 
 /* custom css */
@@ -69,7 +70,7 @@ body{
     flex-direction: column;
     align-items: center;
   
-    &  h1{
+    &  .hero__content{
     color: var(--black-color);
     font-size: 2.25rem;
     font-weight: bold;
@@ -172,15 +173,14 @@ body{
 .about{
   display: flex;
   align-items: center;
-  /* padding: 1rem; */
   margin-bottom: 6.25rem;
-
+  
   & .about__content{
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  align-items: center;
-  gap: 2.5rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5rem;
 
   & .about__image{
   width: 18.75rem;
@@ -188,28 +188,26 @@ body{
   } 
 
   & .about__text{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1.5rem;
-  text-align: center;
+    text-align: center;
+    
 
    &.about__text h2{
-    padding: 0 1rem;
-    color: var(--black-color);
-    font-size: 1.5rem;
+    font-size: 1.625rem;
     font-weight: bold;
     line-height: auto;
     letter-spacing: 0px;
-    }
+    max-width: 343px;
+    margin-bottom: 1.5rem;
+    } 
 
   &.about__text p{
-    padding: 0 1rem;
-    color: var(--medium-brown-color);
     font-size: 1rem;
     font-weight: 400;
+    max-width: 343px;
     line-height: 1.625rem;
     letter-spacing: 0px;
+    margin-bottom: 1.5rem;
+    color: var(--medium-brown-color)
     }
   }
 
@@ -404,23 +402,35 @@ body{
 
   .about__content{
     flex-direction: row;
-  
-    & h2{
-    font-size: 40px;
-    line-height: 40px;
+    
+    & .about__text{
+      text-align: left;
+
+      &.about__text h2{
+        font-size: 2.75rem;
+        font-weight: bold;
+        line-height: auto;
+        letter-spacing: 0px;
+        max-width: 690px;
+        margin-bottom: 1.5rem;
+    } 
+
+    &.about__text p{
+      font-size: 1rem;
+      font-weight: 400;
+      max-width: 343px;
+      line-height: 1.625rem;
+      letter-spacing: 0px;
+      margin-bottom: 1.5rem;
+      color: var(--medium-brown-color)
+      }   
     }
 
     & .about__image{
-  width: 22.75rem;
-  height: auto;
-  margin-left: -3.75rem;
-  }
-
-  & .about__text{
-  text-align: left;
-  align-items: flex-start;
-  max-width: 21.188rem;
-    }   
+      width: 22.75rem;
+      height: auto;
+      margin-left: -3.75rem;
+    }
   }
 }
 
@@ -446,7 +456,7 @@ body{
 /* desktop */
 @media screen and (min-width: 1024px) {
   .container{
-    max-width: 1024px;
+    max-width: 1111px;
     margin: 0 auto;
   }
 
@@ -494,20 +504,34 @@ body{
   margin-bottom: 5.5rem;
 
   & .about__content{
-  flex: 1;
-  flex-direction: row;
-  justify-content: space-between;
+      flex-direction: row;
+      justify-content: space-between;
+
+ & .about__text{
+      &.about__text h2{
+        font-size: 2.5rem;
+        font-weight: bold;
+        line-height: auto;
+        letter-spacing: 0px;
+        max-width: 540px;
+        margin-bottom: 2.125rem;
+    } 
+
+    &.about__text p{
+      font-size: 1.125rem;
+      font-weight: 400;
+      max-width: 540px;
+      line-height: 1.625rem;
+      letter-spacing: 0px;
+      margin-bottom: 1.5rem;
+      color: var(--medium-brown-color)
+      }   
+ }
 
   & .about__image{
-  width: 27.813rem;
-  height: auto;
-  margin-left: 0;
-    }
-
-  & .about__text{
-  text-align: left;
-  align-items: flex-start;
-  max-width: 21.188rem;
+      width: 22.75rem;
+      height: auto;
+      margin-left: 0;
     }
   }
 }
