--- a/style.css
+++ b/style.css
@@ -438,8 +438,15 @@ body{
 .my-work{
 
   & .my-work__content{
+    gap: 3.5rem;
+
+    &.my-work__content h2{
+      font-size: 2rem;
+    }
+
     & .my-work__slider{
       height: 22.5rem;
+
       & .my-work__slider-images img{
         width: 540px;
         height: auto;
@@ -541,11 +548,10 @@ body{
   margin-bottom: 7.5rem;  
 
   & .my-work__content{
-    gap:7.5rem
+    gap:3.5rem;
   
-    & h2{
-    font-size: 40px;
-    line-height: 40px;
+     &.my-work__content h2{
+      font-size: 2.5rem;
     }
   }
 }
